added to connection file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylessheet" type="styles.css" href="../../public/css/style.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
     <header class="hero">
@@ -13,10 +14,10 @@
     </header>
     <nav class="navbar">
         <ul>
-            <li class="nav-links"><a href="/">Home</a></li>
-            <li class="nav-links"><a href="/dashboard">Dashboard</a></li>
-            <li class="nav-links"><a href="/login">Login</a></li>
-            <li class="nav-links"><a href="/#">Logout</a></li>
+            <li class="nav-links""><a href="/">Home</a></li>
+            <li class="nav-links""><a href="/dashboard">Dashboard</a></li>
+            <li class="nav-links""><a href="/login">Login</a></li>
+            <li class="nav-links""><a href="/#">Logout</a></li>
         </ul>
     </nav>
     <div>
