added to main page

--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -60,3 +60,17 @@
 </body>
 
 </html>
+
+<div class="page-container">
+    <div class="home-page">
+        <nav class="navbar has-background-info-dark has-shadow">
+            <div class="navbar-brand">
+                <div class="proj-name "> </div>
+            </div>
+        </nav>
+    </div>
+
+</div>
+<footer class="footer">
+    Made by Sebatian Tischner
+</footer>
