--- a/public/html/all-posts-admin.html
+++ b/public/html/all-posts-admin.html
@@ -33,7 +33,7 @@
       </nav>
       <div class="container has-background-warning-light is-fullheight">
       <div class="hero is-large">
-        <h1 class="is-size-1 has-text-centered has-text-weight-bold">Create A New Post</h1>
+        <h1 class="is-size-1 has-text-centered has-text-weight-bold">Your Posts</h1>
           <div class="hero-body columns">
               {{#each posts}}
               <div class="column is-two-thirds is-flex is-flex-direction-column box has-background-info-light">
