--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="stylesheet" href="./public/css/style.css">
-  <script src="https://kit.fontawesome.com/619ebb2432.js" crossorigin="anonymous"></script>
-  <title>Sebastain's Tech Blog</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylessheet" type="styles.css" href="../../public/css/style.css"
 </head>
-
 <body>
-    <nav class="navbar has-background-info-dark">
+     <nav class="navbar has-background-info-dark">
         <div class="navbar-brand">
           <a class="navbar-item">
             <div class="brandName is-size-1 has-text-info-light">Sebastian's Tech Blog</div>
           </a>
         </div>
-        <div class="navbar-menu" id="nav-links">
-          <div class="navbar-end">
-            <a class="navbar-item is-size-5 has-text-info-light">Dashboard</a>
-              <a class="navbar-item is-size-5 has-text-info-light">Sign Up</a>
-              {{#if loggedIn}}
-              <a class="navbar-item is-size-5 has-text-info-light">Login</a>
-              {{else}}
-              <a class="navbar-item is-size-5 has-text-info-light">Sign Out</a>
-              {{/if}}
-        </div>
-        </div>
+        {{#if loggedIn}}
+            <a href="/" class="navbar-item is-hoverable pt-1">Home</a>
+            <a href="/dashboard" class="navbar-item is-hoverable pt-1">Dashboard</a>
+            <a href="/dashboard/create/" class="navbar-item is-hoverable pt-1 mr-4">Create A Post</a>
+            <button id="logout" class="button is-info">logout</button>
+            {{else}}
+            <a href="/" class="navbar-item is-hoverable pt-1">Homepage</a>
+            <a href="/login" class="button is-info">Login</a>
+            {{/if}}
       </nav>
-    <div class="container has-background-warning-light is-fullheight">
-        <div class="hero is-fullheight">
-          <h1 class="is-size-1 has-text-centered has-text-weight-bold">Dashboard</h1>
-        </div>
-        <div>
-            <button class="button has-background-info">New Post</button>
-        </div>
-        {{[body]}}
-    </div>
-    <footer class="footer has-background-info-dark">
+
+      {{{body}}}
+
+      <footer class="footer has-background-info-dark">
         <div class="content has-text-info-light has-text-centered">
           <p>
             <strong class="content has-text-info-light">Sebastain's Tech Blog</strong> by Sebastian Tischner
@@ -48,7 +37,8 @@
           </p>
         </div>
       </footer>
-
+      {{#if loggedIn}}
+      <script src="/javascript/logout.js"></script>
+      {{/if}}
 </body>
-
 </html>
